--- a/src/index.css
+++ b/src/index.css
@@ -24,3 +24,11 @@ code {
   top: 8px;
   right: 16px;
 }
+
+.overview {
+  position: absolute;
+  z-index: 2;
+  bottom: 0px;
+  width: 100%;
+  height: 100%;
+}
